--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build and push
+      - name: build and push
         id: docker_build
         uses: docker/build-push-action@v3
         with:          
