ci: correcting name

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:          
           push: true
-          tags: Vini03-Alcantra/go_ci:latest
+          tags: vini03-alcantra/go_ci:latest
