--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,5 +24,5 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v3
         with:          
-          push: true
+          push: false
           tags: 20000311/go_ci:latest
